@@ -1,7 +1,6 @@
 Planned features:
 
 - add SilverLink support
-- video scaling
 
 - register window
 - Kevin: <<> what do you think of a new window which will display the various register
@@ -14,7 +13,6 @@ windows by default simply doesn't scale.
 >>
 
 - RTC HW2 to fix (clock wrap around)
-- bind TiEmu #2 VL automatically when second TiEmu is launched
 
 -------------
 + done
